Frankbelford/uatv1ba/force-app/main/default/objects/BeeLinePayRateCodes__c/BeeLinePayRateCodes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>BeeLinePayRateCodes</label>
</CustomObject>