Frankbelford/uatv1ba/force-app/main/default/objects/BeeLinePayRateCodes__c/fields/Job_Science_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Science_Rate_Code__c</fullName>
    <label>Job Science Rate Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>