Frankbelford/uatv1ba/force-app/main/default/objects/BeeLinePayRateCodes__c/fields/Pay_Types_on_Beeline__c.field-meta.xml
<CustomField>
    <fullName>Pay_Types_on_Beeline__c</fullName>
    <label>Pay Types on Beeline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>